# read_osm

./: .gitignore  CMakeLists.txt  LICENSE  README
include/: algorithms.h  digraph.h  osmpbfreader.h  readgraph.h
osmpbf/: run_protoc.bat
src/: example.cpp
